--- a/telegram_gcloner/config.ini
+++ b/telegram_gcloner/config.ini
@@ -1,8 +1,8 @@
 [General]
 path_to_gclone =./fclone
 
-telegram_token =
-user_ids = -1
+telegram_token =5943890183:AAHjrh-EUVwFYAa3S0ga31I-z-cqw-Jd6JM
+user_ids = 636637658
 group_ids = -1
 
 gclone_para_override =
